--- a/users.html
+++ b/users.html
@@ -13,18 +13,70 @@
         <section class="users">
             <header>
                 <div class="content">
-                    <img src="#" alt="">
+                    <img src="lolguy.jfif" alt="">
                     <div class="details">
                         <span>Coding Nepal</span>
-                        <p>Active Now</p>
+                        <p>Active now</p>
                     </div>
                 </div>
                 <a href="#" class="logout">Logout</a>
             </header>
             <div class="search">
-                <span class="text">Select a User to start the Chat</span>
-                <input type="text" placeholder="Enter name to search...">
+                <span class="search">Select a user to start chat...</span>
+                <input type="search" placeholder="Enter name to search...">
                 <button><i class="fas fa-search"></i></button>
+            </div>
+            <div class="users-list">
+                <a href="#">
+                    <div class="content">
+                        <img src="lolguy.jfif" alt="">
+                        <div class="details">
+                            <span>Coding Nepal</span>
+                            <p>This is a test message</p>
+                        </div>    
+                    </div>
+                    <div class="status-dot"><i class="fas fa-circle"></i></div>  
+                </a>  
+                <a href="#">
+                    <div class="content">
+                        <img src="lolguy.jfif" alt="">
+                        <div class="details">
+                            <span>Coding Nepal</span>
+                            <p>This is a test message</p>
+                        </div>    
+                    </div>
+                    <div class="status-dot"><i class="fas fa-circle"></i></div>  
+                </a>    
+                <a href="#">
+                    <div class="content">
+                        <img src="lolguy.jfif" alt="">
+                        <div class="details">
+                            <span>Coding Nepal</span>
+                            <p>This is a test message</p>
+                        </div>    
+                    </div>
+                    <div class="status-dot"><i class="fas fa-circle"></i></div>  
+                </a>      
+                <a href="#">
+                    <div class="content">
+                        <img src="lolguy.jfif" alt="">
+                        <div class="details">
+                            <span>Coding Nepal</span>
+                            <p>This is a test message</p>
+                        </div>    
+                    </div>
+                    <div class="status-dot"><i class="fas fa-circle"></i></div>  
+                </a>    
+                <a href="#">
+                    <div class="content">
+                        <img src="lolguy.jfif" alt="">
+                        <div class="details">
+                            <span>Coding Nepal</span>
+                            <p>This is a test message</p>
+                        </div>    
+                    </div>
+                    <div class="status-dot"><i class="fas fa-circle"></i></div>  
+                </a>    
             </div>
         </section>
     </div>
