--- a/index.html
+++ b/index.html
@@ -5,123 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Time Chat App</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            text-decoration: none;
-            font-family: 'Poppins', sans-serif;
-        }
-        body{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: #f7f7f7;
-            padding: 0 10px;
-        }
-        .wrapper{
-            background: #fff;
-            max-width: 450px;
-            width: 100%;
-            border-radius: 16px;
-            box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
-                        0 32px 64px -48px rgba(0,0,0,0.5);
-        }
-
-        /* Login & Signup Form CSS Start */
-        .form{
-            padding: 25px 30px;
-        }
-        .form header{
-            font-size: 25px;
-            font-weight: 600;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #e6e6e6;
-        }
-        .form form{
-            margin: 20px 0;
-        }
-        .form form .error-text{
-            color: #721c24;
-            padding: 8px 10px;
-            text-align: center;
-            border-radius: 5px;
-            background: #f8d7da;
-            border: 1px solid #f5c6cb;
-            margin-bottom: 10px;
-            display: none;
-        }
-        .form form .name-details{
-            display: flex;
-        }
-        .form .name-details .field:first-child{
-            margin-right: 10px;
-        }
-        .form .name-details .field:last-child{
-            margin-left: 10px;
-        }
-        .form form .field{
-            display: flex;
-            margin-bottom: 10px;
-            flex-direction: column;
-            position: relative;
-        }
-        .form form .field label{
-            margin-bottom: 2px;
-        }
-        .form form .input input{
-            height: 40px;
-            width: 100%;
-            font-size: 16px;
-            padding: 0 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        .form form .field input{
-            outline: none;
-        }
-        .form form .image input{
-            font-size: 17px;
-        }
-        .form form .button input{
-            height: 45px;
-            border: none;
-            color: #fff;
-            font-size: 17px;
-            background: #333;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 13px;
-        }
-        .form form .field i{
-            position: absolute;
-            right: 15px;
-            top: 70%;
-            color: #ccc;
-            cursor: pointer;
-            transform: translateY(-50%);
-        }
-        .form form .field i.active::before{
-            color: #333;
-            content: "\f070";
-        }
-        .form .link{
-            text-align: center;
-            margin: 10px 0;
-            font-size: 17px;
-        }
-        .form .link a{
-            color: #333;
-        }
-        .form .link a:hover{
-            text-decoration: underline;
-        }
-
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
@@ -141,11 +26,11 @@
                     </div>
                     <div class="field input ">
                         <label>Email Address</label>
-                        <input type="text" placeholder="Enter your email">
+                        <input type="email" placeholder="Enter your email">
                     </div>
                     <div class="field input">
                         <label>Password</label>
-                        <input type="text" placeholder="Enter your password">
+                        <input type="password" placeholder="Enter your password">
                         <i class="fas fa-eye"></i>
                     </div>
                     <div class="field image">
@@ -160,6 +45,6 @@
             <div class="link">Already Signed up? <a href="#">Login Now!</a></div>
         </section>
     </div>
-    
+    <script src="javascript/pass-show-hide.js"></script>
 </body>
 </html>
