--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
                 <div class="error-txt">This is an error message!</div>
                 <div class="field input">
                     <label>Email Address</label>
-                    <input type="text" placeholder="Enter your email">
+                    <input type="email" placeholder="Enter your email">
                 </div>
                 <div class="field input">
                     <label>Password</label>
-                    <input type="text" placeholder="Enter your password">
+                    <input type="password" placeholder="Enter your password">
                     <i class="fas fa-eye"></i>
                 </div>
                 <div class="field button">
@@ -31,5 +31,6 @@
         </section>
     </div>
     
+    <script src="javascript/pass-show-hide.js"></script>
 </body>
 </html>
